amélioration responsive, correction du menu collapsed. Reste les autres pages à faire

--- a/stylesheets/layout/navigation.scss
+++ b/stylesheets/layout/navigation.scss
@@ -1,16 +1,57 @@
 // Media Queries
+@media screen and (min-width: 768px) and (max-width: 991px) {
+
+    // Collapsed menu
+    .nav-links__button {
+        margin-left: 2rem;
+    }
+    .navbar-toggler:focus,
+    .navbar-toggler:active {
+        outline: none;
+        box-shadow: none;
+    }
+    
+    .nav-item {
+       background-color: $main-background-color !important; 
+    }
+    
+    .nav-link--collapsed {
+        background-color: $main-background-color !important;
+        color: $second-color !important;
+        padding-left: 3rem !important;
+        
+        &:hover {
+        text-decoration: underline !important;
+        text-decoration-color: $second-color !important;
+        text-decoration-style: solid !important;
+    }
+
+        &:active {
+        font-weight: bold;
+        }
+    }
+    
+//    .navbar-expand-lg {
+//        display: inline-block !important;
+//    }
+
+}
+
+
+
+
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .nav-item {
         padding-left: 0rem;
         padding-right: 1.5rem;
     }
-    
+
     .nav-link {
         background-color: $second-background-color;
         color: $main-color;
         font-size: $medium-less-font !important;
     }
-    
+
     .nav-links__list--radius {
         margin-right: 2rem;
         margin-left: 2rem;
@@ -23,12 +64,12 @@
     .nav-link {
         font-size: $medium-font;
     }
-    
+
     .nav-item {
         padding-left: 0rem;
         padding-right: 1.5rem;
     }
-    
+
     .nav-links__list--radius {
         margin-right: 2rem;
         margin-left: 2rem;
@@ -41,8 +82,7 @@
     background-color: $main-background-color;
 
     &-nav {
-        position: relative;
-        //left: 5rem;
+        position: relative; //left: 5rem;
         margin: 0 auto;
     }
 }
@@ -55,7 +95,7 @@
     &__row {
         background-color: $main-background-color;
     }
-    
+
     &__empty {
         background-color: $main-background-color;
     }
@@ -66,7 +106,7 @@
 
     &__social {
         background-color: $main-background-color;
-        text-align: center;   
+        text-align: center;
     }
 }
 
@@ -74,11 +114,13 @@
     background-color: $second-background-color;
     color: $main-color;
 
-    
     &:hover {
         color: $link-hover-shadow-color;
+        text-decoration: underline !important;
+        text-decoration-color: $link-hover-shadow-color !important;
+        text-decoration-style: solid !important;
     }
-    
+
     &:active {
         font-weight: bold;
     }
@@ -102,17 +144,18 @@
     color: $second-color;
 }
 
+// Social Icons
 i {
     background-color: $main-background-color;
     color: $link-color;
     font-size: $medium-font;
     padding-left: 1rem;
     padding-right: 1rem;
-    
+
     &:hover {
         color: $link-hover-shadow-color;
     }
-    
+
     &:active {
         font-size: $big-font;
     }
